Update and rename JunkDraw.md to 2017-07-13-JunkDraw.md

--- a/_posts/2017-07-13-JunkDraw.md
+++ b/_posts/2017-07-13-JunkDraw.md
@@ -1,4 +1,7 @@
-
+---
+layout: post
+title: The Junk Draw 
+---
 ### A Junk Draw of Probability ### 
 This post will cover a couple important topics in probability theory. These are formulas I should always know, but rarely completely remember. I hope after covering these they'll stick a bit more! 
 
